--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,23 @@
-# Gradle files
+# Android Studio
+.idea/
 .gradle/
-build/
-
-# Local configuration file (sdk path, etc)
 local.properties
+*.iml
 
-# Log/OS Files
+# Build
+/build/
+*/build/
+
+# Gradle
+.gradle/
+**/build/
+
+# APKs
+*.apk
+
+# Log files
 *.log
 
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
-
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Android Profiling
-*.hprof
+# OS files
+.DS_Store
+Thumbs.db
